@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

left to right direction

skinparam classAttributeIconSize 0
hide circle
hide methods

title Domain Model

class Team{
}

class Skill{
    name
    description
}

class Job{
    name
    description
}

class Collaborator{
    name
    email
    phoneNumber
    birthDate
    admissionDate
    IDType
    taxpayerNumber
    citizenNumber

}

class Notification{
    Title
    Message
    Timestamp
    readStatus
    collaboratorName
}

class Address{
    streetAddress
    city
    zipCode
}

class VehicleCheckup {
    vehicleID
    date
    currentKm
}

class Vehicle {
    model
    brand
    type
    tare
    grossWeight
    currentKm
    registerDate
    acquisitionDate
    maintenanceFrequency
    vehiclePlate
}

class GreenSpace {
    name
    area
    GRMEmail
}

class AgendaEntry{
    duration
    date
}

class Entry{
    title
    description
    expectedDuration
}

class Status{
    toBeDone
    done
    canceled
    postponed
    planned
    inProgress
}

Collaborator "1" -- "*"Notification: receives >
Team "0,1" -- "*"Collaborator : has
Collaborator "1" -- "1"Address : resides in
Collaborator "*" -- "1"Job : has
Collaborator "*" -- "*"Skill : has
Vehicle "1" - "*" VehicleCheckup: has
GreenSpace "1"--"1" Address : is located in
GreenSpace "*" - "1" Type : has
Entry "*"--"1" GreenSpace : has
Entry "*"--"1" Urgency : has a degree of >
AgendaEntry "*" -- "0,1" Team : has
AgendaEntry "*" -- "*" Vehicle : is assigned to <
AgendaEntry "*" - "1" Status : has
AgendaEntry "0,1" --- "1" Entry : has
@enduml

